--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>cc.isotopestudio.TrustedTeleport</groupId>
   <artifactId>TrustedTeleport</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.2.1</version>
   	<build>
 		<plugins>
 			<plugin>
